# gaialab-naija-assistant

./: .gitignore  .gitkeep  AGENTS.md  DATA_LICENSE.md  LICENSE  MODEL_CARD_TEMPLATE.md  README.md  compare_models.py  publish_to_huggingface.py  pyproject.toml  requirements.txt  train_adapter.py
app/: app.py
config/: README.md
data/: README.md  gaialab_naija_v0.1.jsonl  gaialab_naija_v0.1_with_ids.jsonl  sample_training_data.jsonl
data/v0.2/: DATASET_PLAN.md  README.md  english_to_pidgin_100.jsonl
data/v0.2/prepared/: gaialab_naija_v0.2_combined.jsonl  gaialab_naija_v0.2_train.jsonl  gaialab_naija_v0.2_validation.jsonl
data/v0.3/: DATASET_PLAN.md
data/v0.3/approved/: gaialab_naija_v0.3_approved.jsonl
evaluation/: benchmark.jsonl  compare_results.py  create_review_sheet.py  evaluate_model.py  gaia_benchmark_v0.1.jsonl  reviewer_guide.md  run_benchmark.py  scorecard.md
evaluation/reports/: v0.2_comparison_report.md  v0.2_side_by_side.jsonl
evaluation/reviews/: human_review_v0.2.csv  human_review_v0.2.xlsx
notebooks/: gaialab_naija_qlora_colab.ipynb
outputs/v0.1/: comparison.csv  comparison.json  comparison.md  metrics.csv  resolved_config.yaml  training_summary.json
scripts/: approve_v03_dataset.py  auto_review_v03_candidates.py  generate_v03_dataset.py  prepare_v02_dataset.py
src/: __init__.py  prepare_dataset.py  train_qlora.py  validate_dataset.py
tests/: test_adapter_pipeline.py  test_app.py  test_approve_v03_dataset.py  test_benchmark.py  test_dataset_v01.py  test_dataset_v02.py  test_dataset_v02_semantics.py  test_dataset_validation.py  test_generate_v03_dataset.py  test_prepare_dataset.py  test_prepared_dataset_v02.py
training/: __init__.py  default_config.yaml  v0.2_config.yaml
(+2 files in other folders)
