[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "gaialab-naija-assistant"
version = "0.1.0"
description = "An experimental open-source AI assistant for Nigerian small-business owners"
readme = "README.md"
requires-python = ">=3.11,<3.12"
license = "MIT"
license-files = ["LICENSE"]
authors = [{name = "GaiaLab contributors"}]
dependencies = [
  "torch>=2.4,<3",
  "transformers==5.14.1",
  "datasets==5.0.0",
  "peft==0.19.1",
  "trl==1.8.0",
  "accelerate==1.14.0",
  "gradio==6.20.0",
  "huggingface-hub==1.24.0",
]

[project.optional-dependencies]
train = ["bitsandbytes==0.49.2"]
test = ["pytest==9.0.2"]

[tool.setuptools.packages.find]
include = ["src*"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
