[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "gaialab-naija-assistant"
version = "0.1.0"
description = "An experimental open-source AI assistant for Nigerian small-business owners"
readme = "README.md"
requires-python = ">=3.11,<3.12"
license = { text = "MIT" }
authors = [
  { name = "GaiaLab contributors" }
]
dependencies = [
  "torch>=2.2,<3",
  "transformers>=4.48,<5",
  "datasets>=3.2,<5",
  "peft>=0.14,<1",
  "trl>=0.15,<1",
  "accelerate>=1.2,<2",
  "gradio>=5.12,<7",
  "huggingface-hub>=0.27,<1",
  "PyYAML>=6.0,<7",
  "tensorboard>=2.16,<3",
]

[project.optional-dependencies]
train = [
  "bitsandbytes>=0.45,<1; platform_system == 'Linux'"
]
test = [
  "pytest>=8.0,<10"
]

[tool.setuptools.packages.find]
include = ["src*"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]